add: translations with i18n

--- a/app/shared/i18n/translations.json
+++ b/app/shared/i18n/translations.json
@@ -35,7 +35,8 @@
     "gender": {
       "choose": "Выбери пол компаньона:",
       "choose_for_chat": "Выбери пол компаньона для общения:",
-      "changed_to_female": "Пол компаньона изменен на девушку 😊",
+      "toggle_gender": "Пол компаньона изменен на {gender} 😊",
+      "changed_to_female": "Пол компаньона изменен на {gender} 😊",
       "changed_to_male": "Пол компаньона изменен на молодого человека 😉",
       "change_warning": "⚠️ Вы уверены, что хотите сменить пол компаньона?\n\nВся история переписки будет удалена!",
       "change_confirmed": "История переписки удалена. Выбери пол компаньона:",
