--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -52,7 +52,24 @@
   "premium": {
     "info_title": "💎 Информация о премиуме",
     "info_text": "Информация об оплате будет добавлена позже.",
-    "unavailable": "Функция оплаты временно недоступна. Попробуйте позже."
+    "unavailable": "Функция оплаты временно недоступна. Попробуйте позже.",
+    "title": "💎 Премиум подписка",
+    "benefits_title": "Что дает премиум:",
+    "benefits": {
+      "unlimited": "✅ Безлимитные сообщения",
+      "priority": "✅ Приоритетная обработка запросов",
+      "history": "✅ Расширенная история диалога",
+      "modes": "✅ Специальные режимы общения"
+    },
+    "price_title": "Стоимость:",
+    "price": "500 руб. / месяц",
+    "howto_title": "Как приобрести:",
+    "howto": "Нажмите кнопку 'Купить премиум' в главном меню (/start)"
+  },
+  "privacy": {
+    "title": "🔐 Политика конфиденциальности",
+    "text": "Здесь ваш текст политики конфиденциальности...",
+    "full": "Полная версия: %{url}"
   },
   "errors": {
     "general": "Произошла ошибка. Попробуйте позже.",
