--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -33,10 +33,7 @@
   },
   "gender": {
     "choose": "Выбери пол компаньона:",
-    "choose_for_chat": "Выбери пол компаньона для общения:",
     "toggle_gender": "Пол компаньона изменен на {gender} 😊",
-    "changed_to_female": "Пол компаньона изменен на девушку 😊",
-    "changed_to_male": "Пол компаньона изменен на молодого человека 😉",
     "change_warning": "⚠️ Вы уверены, что хотите сменить пол компаньона?\n\nВся история переписки будет удалена!",
     "change_confirmed": "История переписки удалена. Выбери пол компаньона:",
     "change_cancelled": "Смена пола отменена. Можете продолжить общение."
@@ -46,8 +43,7 @@
     "processing_error": "Извините, произошла ошибка при обработке сообщения. Попробуйте позже.",
     "save_error": "Произошла ошибка при сохранении сообщения.",
     "unexpected_error": "Произошла неожиданная ошибка. Попробуйте позже.",
-    "empty_response": "OpenAI вернул пустой ответ.",
-    "bot_already_started": "Бот уже запущен - просто напиши сообщение 😊"
+    "empty_response": "OpenAI вернул пустой ответ."
   },
   "premium": {
     "info_title": "💎 Информация о премиуме",
