--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -4,12 +4,20 @@
       "welcome": "Привет! У тебя {free_limit} бесплатных сообщений в день. Выбери пол компаньона:",
       "already_started": "Бот уже запущен - просто напиши сообщение 😊"
     },
+    "check_messages": {
+      "title": "📊 Статистика сообщений",
+      "remaining_free": "У тебя осталось {remaining} из {total} бесплатных сообщений на сегодня",
+      "unlimited": "У тебя премиум подписка - безлимитное общение! 💎",
+      "used_all": "Ты использовал все бесплатные сообщения на сегодня ({total}/{total})",
+      "reset_info": "Лимит обновится завтра в полночь"
+    },
     "help": {
       "title": "🤖 Помощь по боту",
       "commands_title": "Доступные команды:",
       "start_command": "/start - Начать общение с ботом",
       "help_command": "/help - Показать эту справку",
       "gender_command": "/choose_gender - Выбрать пол компаньона",
+      "check_messages_command": "/check_messages - Проверить оставшиеся бесплатные сообщения",
       "communication_title": "💬 Общение:",
       "free_limit": "• Бесплатно: {free_limit} сообщений в день",
       "premium_unlimited": "• Премиум: безлимитное общение",
