openai error fix

--- a/locales/en/translations.json
+++ b/locales/en/translations.json
@@ -51,7 +51,9 @@
     "processing_error": "Sorry, an error occurred while processing your message. Please try again later.",
     "save_error": "An error occurred while saving the message.",
     "unexpected_error": "An unexpected error occurred. Please try again later.",
-    "empty_response": "OpenAI returned an empty response."
+    "empty_response": "OpenAI returned an empty response.",
+    "empty_message": "Please send a non-empty message.",
+    "message_too_long": "Message is too long. Maximum 4000 characters."
   },
   "persons": {
     "gender": {
