--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -51,7 +51,9 @@
     "processing_error": "Извините, произошла ошибка при обработке сообщения. Попробуйте позже.",
     "save_error": "Произошла ошибка при сохранении сообщения.",
     "unexpected_error": "Произошла неожиданная ошибка. Попробуйте позже.",
-    "empty_response": "OpenAI вернул пустой ответ."
+    "empty_response": "OpenAI вернул пустой ответ.",
+    "empty_message": "Пожалуйста, отправьте непустое сообщение.",
+    "message_too_long": "Сообщение слишком длинное. Максимум 4000 символов."
   },
   "persons": {
     "gender": {
