--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -4,12 +4,15 @@
       "welcome": "Привет! У тебя {free_limit} бесплатных сообщений в день. Выбери пол компаньона:",
       "already_started": "Бот уже запущен - просто напиши сообщение 😊"
     },
-    "check_messages": {
-      "title": "📊 Статистика сообщений",
+    "status": {
+      "title": "📊 Статус аккаунта",
       "remaining_free": "У тебя осталось {remaining} из {total} бесплатных сообщений на сегодня",
       "unlimited": "У тебя премиум подписка - безлимитное общение! 💎",
       "used_all": "Ты использовал все бесплатные сообщения на сегодня ({total}/{total})",
-      "reset_info": "Лимит обновится завтра в полночь"
+      "reset_info": "Лимит обновится завтра в полночь",
+      "premium_days": "⏰ Премиум подписка истекает через {days} дн.",
+      "premium_hours": "⏰ Премиум подписка истекает через {hours} ч.",
+      "premium_expiring": "⚠️ Премиум подписка истекает сегодня!"
     },
     "help": {
       "title": "🤖 Помощь по боту",
@@ -17,7 +20,7 @@
       "start_command": "/start - Начать общение с ботом",
       "help_command": "/help - Показать эту справку",
       "gender_command": "/choose_gender - Выбрать пол компаньона",
-      "check_messages_command": "/check_messages - Проверить оставшиеся бесплатные сообщения",
+      "status_command": "/status - Показать статус аккаунта и подписки",
       "communication_title": "💬 Общение:",
       "free_limit": "• Бесплатно: {free_limit} сообщений в день",
       "premium_unlimited": "• Премиум: безлимитное общение",
