--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -21,6 +21,7 @@
       "help_command": "/help - Показать эту справку",
       "gender_command": "/choose_gender - Выбрать пол компаньона",
       "status_command": "/status - Показать статус аккаунта и подписки",
+      "language_command": "/language - Выбрать язык интерфейса",
       "communication_title": "💬 Общение:",
       "free_limit": "• Бесплатно: {free_limit} сообщений в день",
       "premium_unlimited": "• Премиум: безлимитное общение",
@@ -34,6 +35,13 @@
       "gender_change": "• Можно сменить пол компаньона в любое время",
       "limit_reset": "• Лимит сообщений сбрасывается каждый день",
       "start_instruction": "Для начала общения используйте {start_command}"
+    },
+    "language": {
+      "title": "🌍 Выбор языка",
+      "description": "Выберите язык интерфейса:",
+      "changed": "✅ Язык изменен на {language}",
+      "current": "Текущий язык: {language}",
+      "available_languages": "Доступные языки:"
     }
   },
   "consent": {
@@ -174,7 +182,13 @@
     "choose_gender_help": "🎭 Выбрать пол компаньона",
     "premium_info_help": "💎 Информация о премиуме",
     "privacy_info_help": "📝 Политика конфиденциальности",
-    "back_to_help": "↩️ Назад к справке"
+    "back_to_help": "↩️ Назад к справке",
+    "language_ru": "🇷🇺 Русский",
+    "language_en": "🇬🇧 English",
+    "language_sr": "🇷🇸 Српски",
+    "language_de": "🇩🇪 Deutsch",
+    "language_es": "🇪🇸 Español",
+    "choose_language": "🌍 Выбрать язык"
   },
   "ai_prompts": {
     "female": "Ты ИИ-девушка, флиртующая и supportive для одиноких людей. Будь милой, empathetic и игривой.",
