--- a/locales/sr/translations.json
+++ b/locales/sr/translations.json
@@ -21,6 +21,7 @@
       "help_command": "/help - Прикажи ову помоћ",
       "gender_command": "/choose_gender - Изабери пол сапутника",
       "status_command": "/status - Прикажи статус налога и претплате",
+      "language_command": "/language - Изабери језик интерфејса",
       "communication_title": "💬 Комуникација:",
       "free_limit": "• Бесплатно: {free_limit} порука дневно",
       "premium_unlimited": "• Премијум: неограничена комуникација",
@@ -34,6 +35,13 @@
       "gender_change": "• Можеш променити пол сапутника у било ком тренутку",
       "limit_reset": "• Лимит порука се ресетује сваког дана",
       "start_instruction": "За почетак комуникације користи {start_command}"
+    },
+    "language": {
+      "title": "🌍 Избор језика",
+      "description": "Изаберите језик интерфејса:",
+      "changed": "✅ Језик промењен на {language}",
+      "current": "Тренутни језик: {language}",
+      "available_languages": "Доступни језици:"
     }
   },
   "consent": {
@@ -174,7 +182,13 @@
     "choose_gender_help": "🎭 Изабери пол сапутника",
     "premium_info_help": "💎 Информације о премијуму",
     "privacy_info_help": "📝 Политика приватности",
-    "back_to_help": "↩️ Назад на помоћ"
+    "back_to_help": "↩️ Назад на помоћ",
+    "language_ru": "🇷🇺 Русский",
+    "language_en": "🇬🇧 English",
+    "language_sr": "🇷🇸 Српски",
+    "language_de": "🇩🇪 Deutsch",
+    "language_es": "🇪🇸 Español",
+    "choose_language": "🌍 Изабери језик"
   },
   "ai_prompts": {
     "female": "Ти си ИИ девојка која флертује и подржава усамљене људе. Буди слатка, емпатична и игрива.",
