--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -26,7 +26,7 @@
       "free_limit": "• Бесплатно: {free_limit} сообщений в день",
       "premium_unlimited": "• Премиум: безлимитное общение",
       "companion_title": "🎭 Выбор компаньона:",
-      "female_description": "• Девушка - милая и empathetic",
+      "female_description": "• Девушка - милая и эмпатичная",
       "male_description": "• Молодой человек - уверенный и игривый",
       "premium_title": "💎 Премиум подписка:",
       "premium_description": "Открывает безлимитное общение и дополнительные возможности",
