--- a/locales/es/translations.json
+++ b/locales/es/translations.json
@@ -22,6 +22,8 @@
       "gender_command": "/choose_gender - Elegir el género del compañero",
       "status_command": "/status - Mostrar estado de la cuenta e información de suscripción",
       "language_command": "/language - Elegir idioma de la interfaz",
+      "restart_command": "/restart - Reiniciar el bot y borrar todos los datos",
+      "stop_command": "/stop - Detener interacción y borrar todos los datos",
       "communication_title": "💬 Comunicación:",
       "free_limit": "• Gratis: {free_limit} mensajes por día",
       "premium_unlimited": "• Premium: comunicación ilimitada",
@@ -33,8 +35,7 @@
       "faq_title": "❓ Preguntas frecuentes:",
       "context_memory": "• El bot recuerda el contexto de la conversación",
       "gender_change": "• Puedes cambiar el género del compañero en cualquier momento",
-      "limit_reset": "• El límite de mensajes se restablece cada día",
-      "start_instruction": "Para comenzar a chatear usa {start_command}"
+      "limit_reset": "• El límite de mensajes se restablece cada día"
     },
     "language": {
       "title": "🌍 Selección de idioma",
@@ -42,6 +43,16 @@
       "changed": "✅ Idioma cambiado a {language}",
       "current": "Idioma actual: {language}",
       "available_languages": "Idiomas disponibles:"
+    },
+    "restart": {
+      "confirmation": "⚠️ <b>Reiniciar Bot</b>\n\n¿Estás seguro de que quieres reiniciar el bot?\n\n<b>Todos tus datos serán eliminados:</b>\n• Historia del chat\n• Configuraciones\n• Caché\n\n¡Esta acción no se puede deshacer!",
+      "success": "✅ <b>¡Bot reiniciado!</b>\n\nTodos los datos eliminados. Empezando de nuevo...",
+      "cancelled": "❌ Reinicio cancelado"
+    },
+    "stop": {
+      "confirmation": "⚠️ <b>Detener Bot</b>\n\n¿Estás seguro de que quieres detener el bot?\n\n<b>Todos tus datos serán eliminados:</b>\n• Historia del chat\n• Configuraciones\n• Caché\n\n¡Esta acción no se puede deshacer!",
+      "success": "👋 <b>Bot detenido</b>\n\nTodos los datos eliminados. ¡Hasta luego!",
+      "cancelled": "❌ Detención cancelada"
     }
   },
   "consent": {
@@ -137,9 +148,7 @@
       "modes": "✅ Modos de comunicación especiales"
     },
     "price_title": "Precio:",
-    "price": "500 rublos / mes",
-    "howto_title": "Cómo comprar:",
-    "howto": "Haz clic en 'Comprar premium' en el menú principal (/start)"
+    "price": "500 rublos / mes"
   },
   "privacy": {
     "title": "🔐 Política de privacidad",
