--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -22,6 +22,8 @@
       "gender_command": "/choose_gender - Выбрать пол компаньона",
       "status_command": "/status - Показать статус аккаунта и подписки",
       "language_command": "/language - Выбрать язык интерфейса",
+      "restart_command": "/restart - Перезапустить бота и очистить все данные",
+      "stop_command": "/stop - Остановить взаимодействие и очистить все данные",
       "communication_title": "💬 Общение:",
       "free_limit": "• Бесплатно: {free_limit} сообщений в день",
       "premium_unlimited": "• Премиум: безлимитное общение",
@@ -33,8 +35,7 @@
       "faq_title": "❓ Частые вопросы:",
       "context_memory": "• Бот запоминает контекст разговора",
       "gender_change": "• Можно сменить пол компаньона в любое время",
-      "limit_reset": "• Лимит сообщений сбрасывается каждый день",
-      "start_instruction": "Для начала общения используйте {start_command}"
+      "limit_reset": "• Лимит сообщений сбрасывается каждый день"
     },
     "language": {
       "title": "🌍 Выбор языка",
@@ -42,6 +43,16 @@
       "changed": "✅ Язык изменен на {language}",
       "current": "Текущий язык: {language}",
       "available_languages": "Доступные языки:"
+    },
+    "restart": {
+      "confirmation": "⚠️ <b>Перезапуск бота</b>\n\nВы уверены, что хотите перезапустить бота?\n\n<b>Все ваши данные будут удалены:</b>\n• История переписки\n• Настройки\n• Кэш\n\nЭто действие нельзя отменить!",
+      "success": "✅ <b>Бот перезапущен!</b>\n\nВсе данные очищены. Начинаем заново...",
+      "cancelled": "❌ Перезапуск отменен"
+    },
+    "stop": {
+      "confirmation": "⚠️ <b>Остановка бота</b>\n\nВы уверены, что хотите остановить бота?\n\n<b>Все ваши данные будут удалены:</b>\n• История переписки\n• Настройки\n• Кэш\n\nЭто действие нельзя отменить!",
+      "success": "👋 <b>Бот остановлен</b>\n\nВсе данные удалены. До свидания!",
+      "cancelled": "❌ Остановка отменена"
     }
   },
   "consent": {
@@ -137,9 +148,7 @@
       "modes": "✅ Специальные режимы общения"
     },
     "price_title": "Стоимость:",
-    "price": "500 руб. / месяц",
-    "howto_title": "Как приобрести:",
-    "howto": "Нажмите кнопку 'Купить премиум' в главном меню (/start)"
+    "price": "500 руб. / месяц"
   },
   "privacy": {
     "title": "🔐 Политика конфиденциальности",
