--- a/locales/sr/translations.json
+++ b/locales/sr/translations.json
@@ -22,6 +22,8 @@
       "gender_command": "/choose_gender - Изабери пол сапутника",
       "status_command": "/status - Прикажи статус налога и претплате",
       "language_command": "/language - Изабери језик интерфејса",
+      "restart_command": "/restart - Рестартовати бота и обрисати све податке",
+      "stop_command": "/stop - Зауставити интеракцију и обрисати све податке",
       "communication_title": "💬 Комуникација:",
       "free_limit": "• Бесплатно: {free_limit} порука дневно",
       "premium_unlimited": "• Премијум: неограничена комуникација",
@@ -33,8 +35,7 @@
       "faq_title": "❓ Честа питања:",
       "context_memory": "• Бот памти контекст разговора",
       "gender_change": "• Можеш променити пол сапутника у било ком тренутку",
-      "limit_reset": "• Лимит порука се ресетује сваког дана",
-      "start_instruction": "За почетак комуникације користи {start_command}"
+      "limit_reset": "• Лимит порука се ресетује сваког дана"
     },
     "language": {
       "title": "🌍 Избор језика",
@@ -42,6 +43,16 @@
       "changed": "✅ Језик промењен на {language}",
       "current": "Тренутни језик: {language}",
       "available_languages": "Доступни језици:"
+    },
+    "restart": {
+      "confirmation": "⚠️ <b>Рестарт бота</b>\n\nДа ли сте сигурни да желите рестартовати бота?\n\n<b>Сви ваши подаци ће бити обрисани:</b>\n• Историја ћаскања\n• Подешавања\n• Кеш\n\nОва радња се не може опозвати!",
+      "success": "✅ <b>Бот рестартован!</b>\n\nСви подаци обрисани. Почињемо поново...",
+      "cancelled": "❌ Рестарт отказан"
+    },
+    "stop": {
+      "confirmation": "⚠️ <b>Зауставити бота</b>\n\nДа ли сте сигурни да желите зауставити бота?\n\n<b>Сви ваши подаци ће бити обрисани:</b>\n• Историја ћаскања\n• Подешавања\n• Кеш\n\nОва радња се не може опозвати!",
+      "success": "👋 <b>Бот заустављен</b>\n\nСви подаци обрисани. Довиђења!",
+      "cancelled": "❌ Заустављање отказано"
     }
   },
   "consent": {
@@ -137,9 +148,7 @@
       "modes": "✅ Посебни режими комуникације"
     },
     "price_title": "Цена:",
-    "price": "500 динара / месец",
-    "howto_title": "Како купити:",
-    "howto": "Кликни на дугме 'Купи премијум' у главном менију (/start)"
+    "price": "500 динара / месец"
   },
   "privacy": {
     "title": "🔐 Политика приватности",
