--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -63,6 +63,8 @@
   },
   "gender": {
     "choose": "Выбери пол компаньона:",
+    "choose_gender": "Выбери пол компаньона:",
+    "gender_selected": "Выбран пол: {gender} 😊",
     "toggle_gender": "Пол компаньона изменен на {gender} 😊",
     "change_warning": "⚠️ Вы уверены, что хотите сменить пол компаньона?\n\nВся история переписки будет удалена!",
     "change_confirmed": "История переписки удалена. Выбери пол компаньона:",
