invent, /stop fix

--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -31,7 +31,7 @@
       "female_description": "• Девушка - милая и эмпатичная",
       "male_description": "• Молодой человек - уверенный и игривый",
       "premium_title": "💎 Премиум подписка:",
-      "premium_description": "Открывает безлимитное общение и дополнительные возможности",
+      "premium_description": "• Открывает безлимитное общение и дополнительные возможности",
       "faq_title": "❓ Частые вопросы:",
       "context_memory": "• Бот запоминает контекст разговора",
       "gender_change": "• Можно сменить пол компаньона в любое время",
